# cjob

./: .gitignore  README.md  cjob.example.yml  pyproject.toml  tasks.py
.github/workflows/: tests.yml
cjob/: __init__.py  cli.py  client.py  config.py  ec2.py  s3.py  settings.py  ssh.py
tests/: test_cjob.py  test_ec2_create_key.py  test_get_instances.py  test_job_prefix.py  tests.txt  utils.py
