[tool.poetry]
name = "cjob"
version = "0.1.0"
description = ""
authors = ["Matthew Segal <mattdsegal@gmail.com>"]

[tool.poetry.scripts]
cjob = "cjob.cli:cli"


[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.7"
timeago = "^1.0.15"
click = "^7.1.2"
tabulate = "^0.8.7"
awscli = "^1.19.7"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
moto = "^1.3.16"
black = "^20.8b1"
mypy = "^0.800"
invoke = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-W ignore"
testpaths = ["tests"]

[tool.black]
line-length = 100
